--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include('header') %>
 <form method="GET" action="/cotacao">
-  <input name="cotacao" type="text" placeholder="Cotação dolar"><br>
+  <input name="cotacao" type="text" placeholder="Cotação dolar" value="<%=cotacao%>"><br>
   <input name="quantidade" type="text" placeholder="Quantidade de dolares"><br>
   <button>Converter!</button>
 </form>
